# backend

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
backend/: dockerfile  requirements.txt
backend/src/: main.py
backend/src/config/: manager.py
backend/src/config/setting/: base.py  development.py  environment.py  production.py  staging.py
backend/src/models/db/: account.py
backend/src/repository/: base.py  database.py  table.py
backend/src/repository/curd/: base.py
backend/src/securites/hashing/: hash.py
