[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = ""
authors = ["ahmedaswan <159680782+ahmedaswan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
asgi-lifespan = "^2.1.0"
argon2-cffi = "^23.1.0"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
bcrypt = "^4.1.2"
black = "^24.2.0"
colorama = "^0.4.6"
email-validator = "^2.1.0.post1"
fastapi = "^0.109.2"
greenlet = "^3.0.3"
httpx = "^0.26.0"
isort = "^5.13.2"
loguru = "^0.7.2"
mypy = "^1.8.0"
passlib = "^1.7.4"
pathlib = "^1.0.1"
pre-commit = "^3.6.1"
python-dotenv = "^1.0.1"
python-decouple = "^3.8"
python-jose = "^3.3.0"
python-slugify = "^8.0.4"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
sqlalchemy = "2.0.0b3"
trio = "^0.24.0"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
